--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
+    <!-- <link href="./output.css" rel="stylesheet"> -->
     <title>React App</title>
   </head>
   <body>
