--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://kit.fontawesome.com/c998e43a22.js" crossorigin="anonymous"></script>
+
     <!-- <link href="./output.css" rel="stylesheet"> -->
     <title>React App</title>
   </head>
