--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/c998e43a22.js" crossorigin="anonymous"></script>
 
     <!-- <link href="./output.css" rel="stylesheet"> -->
-    <title>React App</title>
+    <title>Taskflow</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
